ingress/comet-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: comet
  namespace: fiware
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: comet
    http:
      paths:
      - path: /
        backend:
          serviceName: comet
          servicePort: 8666
