ingress/orion-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: orion
  namespace: fiware
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: orion
    http:
      paths:
      - path: /
        backend:
          serviceName: orion
          servicePort: 1026
